// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`endMeeting generates a meeting summary and sets sort order 1`] = `
Object {
  "action": Array [
    Object {
      "agendaId": 0,
      "content": "Test Action[1]",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 3,
      "id": 10,
      "isComplete": false,
      "sortOrder": 1,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 3,
    },
    Object {
      "agendaId": 2,
      "content": "Test Action[0]",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 5,
      "id": 11,
      "isComplete": false,
      "sortOrder": 1,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 5,
    },
  ],
  "agendaItem": Array [
    Object {
      "content": "Test Agenda Item[2]",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 3,
      "id": 0,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 2,
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.998Z,
    },
    Object {
      "content": "Test Agenda Item[1]",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 1,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 1,
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
    },
    Object {
      "content": "Test Agenda Item[0]",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 5,
      "id": 2,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 0,
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T07:00:00.000Z,
    },
  ],
  "meeting": Object {
    "actions": Array [
      Object {
        "content": "Test Action[1]",
        "id": 15,
        "teamMemberId": 7,
      },
      Object {
        "content": "Test Action[0]",
        "id": 16,
        "teamMemberId": 9,
      },
    ],
    "agendaItemsCompleted": 3,
    "createdAt": 2017-01-01T08:00:00.000Z,
    "endedAt": 2017-01-01T08:00:00.000Z,
    "facilitator": 17,
    "id": 14,
    "invitees": Array [
      Object {
        "actions": Array [],
        "id": 18,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Black Widow",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 17,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Captain America",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 19,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Hulk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 20,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Iron Man",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 21,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Nighthawk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [
          Object {
            "content": "Test Action[0]",
            "id": 16,
            "teamMemberId": 9,
          },
        ],
        "id": 9,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Thor",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 8,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Vision",
        "present": false,
        "projects": Array [
          Object {
            "content": "Test Project[0]",
            "id": 22,
            "status": "active",
            "teamMemberId": 8,
          },
        ],
      },
      Object {
        "actions": Array [
          Object {
            "content": "Test Action[1]",
            "id": 15,
            "teamMemberId": 7,
          },
        ],
        "id": 7,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "War Machine",
        "present": false,
        "projects": Array [
          Object {
            "content": "Test Project[1]",
            "id": 23,
            "status": "active",
            "teamMemberId": 7,
          },
        ],
      },
    ],
    "meetingNumber": 1,
    "projects": Array [
      Object {
        "content": "Test Project[1]",
        "id": 23,
        "status": "active",
        "teamMemberId": 7,
      },
      Object {
        "content": "Test Project[0]",
        "id": 22,
        "status": "active",
        "teamMemberId": 8,
      },
    ],
    "successExpression": "Woot, woot",
    "successStatement": "Looks like things are moving along!",
    "teamId": 6,
    "teamName": "Team America",
  },
  "project": Array [
    Object {
      "agendaId": 0,
      "content": "Test Project[1]",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 3,
      "id": 12,
      "isArchived": false,
      "sortOrder": 1,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 3,
    },
    Object {
      "agendaId": 1,
      "content": "Test Project[0]",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 4,
      "id": 13,
      "isArchived": false,
      "sortOrder": 2,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 4,
    },
  ],
  "team": Object {
    "activeFacilitator": 24,
    "checkInGreeting": "Salut",
    "checkInQuestion": "learn any new slang lately",
    "facilitatorPhase": "summary",
    "facilitatorPhaseItem": null,
    "id": 6,
    "isArchived": false,
    "isPaid": true,
    "meetingId": 14,
    "meetingPhase": "summary",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 25,
  },
  "teamMember": Array [
    Object {
      "checkInOrder": 26,
      "email": "natasha.romanova@avengers.org",
      "id": 18,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Black Widow",
      "teamId": 6,
      "userId": 34,
    },
    Object {
      "checkInOrder": 27,
      "email": "steve.rogers@avengers.org",
      "id": 17,
      "isFacilitator": false,
      "isLead": true,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Captain America",
      "teamId": 6,
      "userId": 35,
    },
    Object {
      "checkInOrder": 28,
      "email": "bruce.banner@avengers.org",
      "id": 19,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Hulk",
      "teamId": 6,
      "userId": 36,
    },
    Object {
      "checkInOrder": 29,
      "email": "tony.stark@avengers.org",
      "id": 20,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Iron Man",
      "teamId": 6,
      "userId": 37,
    },
    Object {
      "checkInOrder": 30,
      "email": "kyle.richmond@avengers.org",
      "id": 21,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Nighthawk",
      "teamId": 6,
      "userId": 38,
    },
    Object {
      "checkInOrder": 31,
      "email": "thor@avengers.org",
      "id": 9,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Thor",
      "teamId": 6,
      "userId": 5,
    },
    Object {
      "checkInOrder": 32,
      "email": "vision@avengers.org",
      "id": 8,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Vision",
      "teamId": 6,
      "userId": 4,
    },
    Object {
      "checkInOrder": 33,
      "email": "james.rhodes@avengers.org",
      "id": 7,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "War Machine",
      "teamId": 6,
      "userId": 3,
    },
  ],
}
`;

exports[`endMeeting generates a meeting summary and sets sort order with pre-existing actions and projects 1`] = `
Object {
  "action": Array [
    Object {
      "content": "Test Action[0]",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 3,
      "id": 10,
      "isComplete": false,
      "sortOrder": 0,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 3,
    },
    Object {
      "agendaId": 0,
      "content": "Test Action[1]",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 3,
      "id": 11,
      "isComplete": false,
      "sortOrder": 1,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 3,
    },
    Object {
      "agendaId": 2,
      "content": "Test Action[2]",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 5,
      "id": 12,
      "isComplete": false,
      "sortOrder": 1,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T06:59:59.998Z,
      "userId": 5,
    },
  ],
  "agendaItem": Array [
    Object {
      "content": "Test Agenda Item[0]",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 3,
      "id": 0,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 0,
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T07:00:00.000Z,
    },
    Object {
      "content": "Test Agenda Item[1]",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 1,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 1,
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
    },
    Object {
      "content": "Test Agenda Item[2]",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 5,
      "id": 2,
      "isActive": true,
      "isComplete": true,
      "sortOrder": 2,
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T06:59:59.998Z,
    },
  ],
  "meeting": Object {
    "actions": Array [
      Object {
        "content": "Test Action[2]",
        "id": 17,
        "teamMemberId": 9,
      },
      Object {
        "content": "Test Action[1]",
        "id": 18,
        "teamMemberId": 7,
      },
    ],
    "agendaItemsCompleted": 3,
    "createdAt": 2017-01-01T08:00:00.000Z,
    "endedAt": 2017-01-01T08:00:00.000Z,
    "facilitator": 19,
    "id": 16,
    "invitees": Array [
      Object {
        "actions": Array [],
        "id": 20,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Black Widow",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 19,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Captain America",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 21,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Hulk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 22,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Iron Man",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 23,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Nighthawk",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [
          Object {
            "content": "Test Action[1]",
            "id": 18,
            "teamMemberId": 7,
          },
        ],
        "id": 7,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Thor",
        "present": false,
        "projects": Array [],
      },
      Object {
        "actions": Array [],
        "id": 8,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "Vision",
        "present": false,
        "projects": Array [
          Object {
            "content": "Test Project[1]",
            "id": 24,
            "status": "active",
            "teamMemberId": 8,
          },
        ],
      },
      Object {
        "actions": Array [
          Object {
            "content": "Test Action[2]",
            "id": 17,
            "teamMemberId": 9,
          },
        ],
        "id": 9,
        "picture": "https://placeimg.com/100/100/animals",
        "preferredName": "War Machine",
        "present": false,
        "projects": Array [
          Object {
            "content": "Test Project[2]",
            "id": 25,
            "status": "active",
            "teamMemberId": 9,
          },
        ],
      },
    ],
    "meetingNumber": 1,
    "projects": Array [
      Object {
        "content": "Test Project[2]",
        "id": 25,
        "status": "active",
        "teamMemberId": 9,
      },
      Object {
        "content": "Test Project[1]",
        "id": 24,
        "status": "active",
        "teamMemberId": 8,
      },
    ],
    "successExpression": "Woot, woot",
    "successStatement": "Looks like things are moving along!",
    "teamId": 6,
    "teamName": "Team America",
  },
  "project": Array [
    Object {
      "content": "Test Project[0]",
      "createdAt": 2017-01-01T06:59:59.999Z,
      "createdBy": 3,
      "id": 13,
      "isArchived": false,
      "sortOrder": 0,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 7,
      "updatedAt": 2017-01-01T07:00:00.000Z,
      "userId": 3,
    },
    Object {
      "agendaId": 1,
      "content": "Test Project[1]",
      "createdAt": 2017-01-01T06:59:59.998Z,
      "createdBy": 4,
      "id": 14,
      "isArchived": false,
      "sortOrder": 2,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 8,
      "updatedAt": 2017-01-01T06:59:59.999Z,
      "userId": 4,
    },
    Object {
      "agendaId": 2,
      "content": "Test Project[2]",
      "createdAt": 2017-01-01T06:59:59.997Z,
      "createdBy": 5,
      "id": 15,
      "isArchived": false,
      "sortOrder": 1,
      "status": "active",
      "teamId": 6,
      "teamMemberId": 9,
      "updatedAt": 2017-01-01T06:59:59.998Z,
      "userId": 5,
    },
  ],
  "team": Object {
    "activeFacilitator": 26,
    "checkInGreeting": "Salut",
    "checkInQuestion": "learn any new slang lately",
    "facilitatorPhase": "summary",
    "facilitatorPhaseItem": null,
    "id": 6,
    "isArchived": false,
    "isPaid": true,
    "meetingId": 16,
    "meetingPhase": "summary",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 27,
  },
  "teamMember": Array [
    Object {
      "checkInOrder": 28,
      "email": "natasha.romanova@avengers.org",
      "id": 20,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Black Widow",
      "teamId": 6,
      "userId": 36,
    },
    Object {
      "checkInOrder": 29,
      "email": "steve.rogers@avengers.org",
      "id": 19,
      "isFacilitator": false,
      "isLead": true,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Captain America",
      "teamId": 6,
      "userId": 37,
    },
    Object {
      "checkInOrder": 30,
      "email": "bruce.banner@avengers.org",
      "id": 21,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Hulk",
      "teamId": 6,
      "userId": 38,
    },
    Object {
      "checkInOrder": 31,
      "email": "tony.stark@avengers.org",
      "id": 22,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Iron Man",
      "teamId": 6,
      "userId": 39,
    },
    Object {
      "checkInOrder": 32,
      "email": "kyle.richmond@avengers.org",
      "id": 23,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Nighthawk",
      "teamId": 6,
      "userId": 40,
    },
    Object {
      "checkInOrder": 33,
      "email": "thor@avengers.org",
      "id": 7,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Thor",
      "teamId": 6,
      "userId": 3,
    },
    Object {
      "checkInOrder": 34,
      "email": "vision@avengers.org",
      "id": 8,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "Vision",
      "teamId": 6,
      "userId": 4,
    },
    Object {
      "checkInOrder": 35,
      "email": "james.rhodes@avengers.org",
      "id": 9,
      "isFacilitator": false,
      "isLead": false,
      "isNotRemoved": true,
      "picture": "https://placeimg.com/100/100/animals",
      "preferredName": "War Machine",
      "teamId": 6,
      "userId": 5,
    },
  ],
}
`;

exports[`endMeeting throw if called after meeting ended or no active meeting 1`] = `"{\\"_error\\":\\"Meeting already ended!\\"}"`;

exports[`endMeeting throw if no meeting has ever been created 1`] = `"{\\"_error\\":\\"Meeting already ended!\\"}"`;

exports[`endMeeting throw when the caller is not a team member 1`] = `"{\\"_error\\":\\"You do not have access to team foo\\"}"`;

exports[`endMeeting throws when no websocket is present 1`] = `"{\\"_error\\":\\"this must be called from a websocket\\"}"`;
